Kubernetes/examples/deployment-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: apache
    spec:
      volumes:
        - name: httpd-conf
          configMap:
            name: httpd-conf
      containers:
        - name: dummy-website
          image: wozorio/dummy-website:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: httpd-conf
              mountPath: /usr/local/apache2/conf/httpd.conf
              subPath: httpd.conf
          resources:
            limits:
              cpu: 8m
              memory: 20Mi
            requests:
              cpu: 4m
              memory: 10Mi
