Kubernetes/examples/service-azure-loadbalancer-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  labels:
    app: apache
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: "10.240.0.100"
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: apache
