Kubernetes/examples/ingress-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apache
  labels:
    app: apache
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - yourdomain.com
      secretName: ingress-tls
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /httpd
            backend:
              serviceName: apache
              servicePort: 80
